add options mngt and externalize template
